--- a/documentation/signals/adc_daq_v1.ucf
+++ b/documentation/signals/adc_daq_v1.ucf
@@ -96,69 +96,69 @@ NET "" LOC="" ; # JP2-7
 NET "" LOC="" ; # JP2-8 
 NET "" LOC="" ; # JP2-9 
 NET "" LOC="Bank 1 VREF" ; # JP2-10 
-NET "" LOC="U12" ; # JP2-11 
+NET "A_EN3LVCMOS33; # JP2-11 
 NET "" LOC="Rfuse" ; # JP2-12 
 NET "" LOC="" ; # JP2-13 
 NET "" LOC="" ; # JP2-14 
 NET "" LOC="G16" | IOSTANDARD=LVCMOS33; # JP2-15 
-NET "" LOC="G19" | IOSTANDARD=LVCMOS33; # JP2-16 
-NET "" LOC="G17" | IOSTANDARD=LVCMOS33; # JP2-17 
-NET "" LOC="F20" | IOSTANDARD=LVCMOS33; # JP2-18 
-NET "" LOC="H19" | IOSTANDARD=LVCMOS33; # JP2-19 
-NET "" LOC="H20" | IOSTANDARD=LVCMOS33; # JP2-20 
-NET "" LOC="H18" | IOSTANDARD=LVCMOS33; # JP2-21 
-NET "" LOC="J19" | IOSTANDARD=LVCMOS33; # JP2-22 
-NET "" LOC="F16" | IOSTANDARD=LVCMOS33; # JP2-23 
-NET "" LOC="D19" | IOSTANDARD=LVCMOS33; # JP2-24 
-NET "" LOC="F17" | IOSTANDARD=LVCMOS33; # JP2-25 
+NET "ADCS_SDO" LOC="G19" | IOSTANDARD=LVCMOS33; # JP2-16 
+NET "LS_IN0" LOC="G17" | IOSTANDARD=LVCMOS33; # JP2-17 
+NET "ADCS_SDI" LOC="F20" | IOSTANDARD=LVCMOS33; # JP2-18 
+NET "LS_IN1" LOC="H19" | IOSTANDARD=LVCMOS33; # JP2-19 
+NET "ADCS_SCLK" LOC="H20" | IOSTANDARD=LVCMOS33; # JP2-20 
+NET "LS_IN2" LOC="H18" | IOSTANDARD=LVCMOS33; # JP2-21 
+NET "ADCS_CSB" LOC="J19" | IOSTANDARD=LVCMOS33; # JP2-22 
+NET "LS_IN3" LOC="F16" | IOSTANDARD=LVCMOS33; # JP2-23 
+NET "LS_IN4" LOC="D19" | IOSTANDARD=LVCMOS33; # JP2-24 
+NET "LS_IN5" LOC="F17" | IOSTANDARD=LVCMOS33; # JP2-25 
 NET "" LOC="D20" | IOSTANDARD=LVCMOS33; # JP2-26 
-NET "" LOC="J17" | IOSTANDARD=LVCMOS33; # JP2-27 
-NET "" LOC="F18" | IOSTANDARD=LVCMOS33; # JP2-28 
-NET "" LOC="K17" | IOSTANDARD=LVCMOS33; # JP2-29 
-NET "" LOC="F19" | IOSTANDARD=LVCMOS33; # JP2-30 
-NET "" LOC="K16" | IOSTANDARD=LVCMOS33; # JP2-31 
-NET "" LOC="M16" | IOSTANDARD=LVCMOS33; # JP2-32 
-NET "" LOC="J16" | IOSTANDARD=LVCMOS33; # JP2-33 
+NET "D3_CSB" LOC="J17" | IOSTANDARD=LVCMOS33; # JP2-27 
+NET "DS_SDA" LOC="F18" | IOSTANDARD=LVCMOS33; # JP2-28 
+NET "D3_SDI" LOC="K17" | IOSTANDARD=LVCMOS33; # JP2-29 
+NET "DS_SCL" LOC="F19" | IOSTANDARD=LVCMOS33; # JP2-30 
+NET "D3_SCLK" LOC="K16" | IOSTANDARD=LVCMOS33; # JP2-31 
+NET "DS_CLRB" LOC="M16" | IOSTANDARD=LVCMOS33; # JP2-32 
+NET "D2_CSB" LOC="J16" | IOSTANDARD=LVCMOS33; # JP2-33 
 NET "" LOC="L15" | IOSTANDARD=LVCMOS33; # JP2-34 
 NET "" LOC="Bank 1 VCCO" ; # JP2-35 
 NET "" LOC="" ; # JP2-36 
-NET "" LOC="V21" | IOSTANDARD=LVCMOS33; # JP2-37 
+NET "D2_SDI" LOC="V21" | IOSTANDARD=LVCMOS33; # JP2-37 
 NET "" LOC="K20" | IOSTANDARD=LVCMOS33; # JP2-38 
-NET "" LOC="V22" | IOSTANDARD=LVCMOS33; # JP2-39 
+NET "D2_SCLK" LOC="V22" | IOSTANDARD=LVCMOS33; # JP2-39 
 NET "" LOC="K19" | IOSTANDARD=LVCMOS33; # JP2-40 
-NET "" LOC="T21" | IOSTANDARD=LVCMOS33; # JP2-41 
+NET "D0_CSB" LOC="T21" | IOSTANDARD=LVCMOS33; # JP2-41 
 NET "" LOC="U20" | IOSTANDARD=LVCMOS33; # JP2-42 
-NET "" LOC="T22" | IOSTANDARD=LVCMOS33; # JP2-43 
+NET "D0_SDI" LOC="T22" | IOSTANDARD=LVCMOS33; # JP2-43 
 NET "" LOC="U22" | IOSTANDARD=LVCMOS33; # JP2-44 
-NET "" LOC="P21" | IOSTANDARD=LVCMOS33; # JP2-45 
+NET "D0_SCLK" LOC="P21" | IOSTANDARD=LVCMOS33; # JP2-45 
 NET "" LOC="R20" | IOSTANDARD=LVCMOS33; # JP2-46 
-NET "" LOC="P22" | IOSTANDARD=LVCMOS33; # JP2-47 
+NET "D1_CSB" LOC="P22" | IOSTANDARD=LVCMOS33; # JP2-47 
 NET "" LOC="R22" | IOSTANDARD=LVCMOS33; # JP2-48 
-NET "" LOC="M21" | IOSTANDARD=LVCMOS33; # JP2-49 
+NET "D1_SDI" LOC="M21" | IOSTANDARD=LVCMOS33; # JP2-49 
 NET "" LOC="N20" | IOSTANDARD=LVCMOS33; # JP2-50 
-NET "" LOC="M22" | IOSTANDARD=LVCMOS33; # JP2-51 
+NET "D1_SCLK" LOC="M22" | IOSTANDARD=LVCMOS33; # JP2-51 
 NET "" LOC="N22" | IOSTANDARD=LVCMOS33; # JP2-52 
 NET "" LOC="L20" | IOSTANDARD=LVCMOS33; # JP2-53 
 NET "" LOC="M20" | IOSTANDARD=LVCMOS33; # JP2-54 
 NET "" LOC="Bank 1 VCCO" ; # JP2-55 
 NET "" LOC="" ; # JP2-56 
-NET "" LOC="L22" | IOSTANDARD=LVCMOS33; # JP2-57 
-NET "" LOC="L19" | IOSTANDARD=LVCMOS33; # JP2-58 
-NET "" LOC="H21" | IOSTANDARD=LVCMOS33; # JP2-59 
-NET "" LOC="K21" | IOSTANDARD=LVCMOS33; # JP2-60 
-NET "" LOC="H22" | IOSTANDARD=LVCMOS33; # JP2-61 
-NET "" LOC="K22" | IOSTANDARD=LVCMOS33; # JP2-62 
-NET "" LOC="F21" | IOSTANDARD=LVCMOS33; # JP2-63 
-NET "" LOC="G20" | IOSTANDARD=LVCMOS33; # JP2-64 
-NET "" LOC="F22" | IOSTANDARD=LVCMOS33; # JP2-65 
-NET "" LOC="G22" | IOSTANDARD=LVCMOS33; # JP2-66 
-NET "" LOC="D21" | IOSTANDARD=LVCMOS33; # JP2-67 
-NET "" LOC="E20" | IOSTANDARD=LVCMOS33; # JP2-68 
-NET "" LOC="D22" | IOSTANDARD=LVCMOS33; # JP2-69 
-NET "" LOC="E22" | IOSTANDARD=LVCMOS33; # JP2-70 
-NET "" LOC="B21" | IOSTANDARD=LVCMOS33; # JP2-71 
-NET "" LOC="C20" | IOSTANDARD=LVCMOS33; # JP2-72 
-NET "" LOC="B22" | IOSTANDARD=LVCMOS33; # JP2-73 
+NET "GPIO_3V3_0" LOC="L22" | IOSTANDARD=LVCMOS33; # JP2-57 
+NET "GPIO_3V3_1" LOC="L19" | IOSTANDARD=LVCMOS33; # JP2-58 
+NET "GPIO_3V3_2" LOC="H21" | IOSTANDARD=LVCMOS33; # JP2-59 
+NET "GP_0" LOC="K21" | IOSTANDARD=LVCMOS33; # JP2-60 
+NET "GP_1" LOC="H22" | IOSTANDARD=LVCMOS33; # JP2-61 
+NET "GP_2" LOC="K22" | IOSTANDARD=LVCMOS33; # JP2-62 
+NET "GP_3" LOC="F21" | IOSTANDARD=LVCMOS33; # JP2-63 
+NET "GP_4" LOC="G20" | IOSTANDARD=LVCMOS33; # JP2-64 
+NET "GP_5" LOC="F22" | IOSTANDARD=LVCMOS33; # JP2-65 
+NET "GP_6" LOC="G22" | IOSTANDARD=LVCMOS33; # JP2-66 
+NET "GP_7" LOC="D21" | IOSTANDARD=LVCMOS33; # JP2-67 
+NET "GP_8" LOC="E20" | IOSTANDARD=LVCMOS33; # JP2-68 
+NET "GP_9" LOC="D22" | IOSTANDARD=LVCMOS33; # JP2-69 
+NET "GP_10" LOC="E22" | IOSTANDARD=LVCMOS33; # JP2-70 
+NET "GP_11" LOC="B21" | IOSTANDARD=LVCMOS33; # JP2-71 
+NET "GP_SDA" LOC="C20" | IOSTANDARD=LVCMOS33; # JP2-72 
+NET "GP_SCL" LOC="B22" | IOSTANDARD=LVCMOS33; # JP2-73 
 NET "" LOC="C22" | IOSTANDARD=LVCMOS33; # JP2-74 
 NET "" LOC="A21" | IOSTANDARD=LVCMOS33; # JP2-75 
 NET "" LOC="A20" | IOSTANDARD=LVCMOS33; # JP2-76 
@@ -173,11 +173,11 @@ NET "" LOC="" ; # JP1-4
 NET "" LOC="" ; # JP1-5 
 NET "" LOC="" ; # JP1-6 
 NET "" LOC="" ; # JP1-7 
-NET "" LOC="T14" ; # JP1-8 
+NET "LS0_ELVCMOS33; # JP1-8 
 NET "" LOC="" ; # JP1-9 
-NET "" LOC="Y9" ; # JP1-10 
+NET "JP1-1LVCMOS33; # JP1-10 
 NET "" LOC="" ; # JP1-11 
-NET "" LOC="AB9" ; # JP1-12 
+NET "A_EN1LVCMOS33; # JP1-12 
 NET "" LOC="" ; # JP1-13 
 NET "" LOC="" ; # JP1-14 
 NET "" LOC="W20" | IOSTANDARD=LVCMOS33; # JP1-15 
@@ -188,63 +188,63 @@ NET "" LOC="U19" | IOSTANDARD=LVCMOS33; # JP1-19
 NET "" LOC="P17" | IOSTANDARD=LVCMOS33; # JP1-20 
 NET "" LOC="V20" | IOSTANDARD=LVCMOS33; # JP1-21 
 NET "" LOC="N16" | IOSTANDARD=LVCMOS33; # JP1-22 
-NET "" LOC="C5" | IOSTANDARD=LVCMOS33; # JP1-23 
+NET "A0_CNV_P" LOC="C5" | IOSTANDARD=LVDS_25; # JP1-23 
 NET "" LOC="M17" | IOSTANDARD=LVCMOS33; # JP1-24 
-NET "" LOC="A5" | IOSTANDARD=LVCMOS33; # JP1-25 
+NET "A0_CNV_N" LOC="A5" | IOSTANDARD=LVDS_25; # JP1-25 
 NET "" LOC="M18" | IOSTANDARD=LVCMOS33; # JP1-26 
-NET "" LOC="D14" | IOSTANDARD=LVCMOS33; # JP1-27 
+NET "A0_D_P" LOC="D14" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-27 
 NET "" LOC="P18" | IOSTANDARD=LVCMOS33; # JP1-28 
-NET "" LOC="C14" | IOSTANDARD=LVCMOS33; # JP1-29 
+NET "A0_D_N" LOC="C14" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-29 
 NET "" LOC="R19" | IOSTANDARD=LVCMOS33; # JP1-30 
-NET "" LOC="E16" | IOSTANDARD=LVCMOS33; # JP1-31 
-NET "" LOC="D9" | IOSTANDARD=LVCMOS33; # JP1-32 
-NET "" LOC="D17" | IOSTANDARD=LVCMOS33; # JP1-33 
-NET "" LOC="C8" | IOSTANDARD=LVCMOS33; # JP1-34 
+NET "A0_DCO_P" LOC="E16" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-31 
+NET "A0_EN0_HV" LOC="D9" | IOSTANDARD=LVCMOS33; # JP1-32 
+NET "A0_DCO_N" LOC="D17" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-33 
+NET "A_EN2_HV" LOC="C8" | IOSTANDARD=LVCMOS33; # JP1-34 
 NET "" LOC="" ; # JP1-35 
 NET "" LOC="Bank 0 VCCO" ; # JP1-36 
-NET "" LOC="D7" | IOSTANDARD=LVCMOS33; # JP1-37 
+NET "A0_CLK_P" LOC="D7" | IOSTANDARD=LVDS_25; # JP1-37 
 NET "" LOC="D10" | IOSTANDARD=LVCMOS33; # JP1-38 
-NET "" LOC="D8" | IOSTANDARD=LVCMOS33; # JP1-39 
+NET "A0_CLK_N" LOC="D8" | IOSTANDARD=LVDS_25; # JP1-39 
 NET "" LOC="C10" | IOSTANDARD=LVCMOS33; # JP1-40 
 NET "" LOC="L17" | IOSTANDARD=LVCMOS33; # JP1-41 
 NET "" LOC="D11" | IOSTANDARD=LVCMOS33; # JP1-42 
 NET "" LOC="K18" | IOSTANDARD=LVCMOS33; # JP1-43 
 NET "" LOC="C12" | IOSTANDARD=LVCMOS33; # JP1-44 
 NET "" LOC="D6" | IOSTANDARD=LVCMOS33; # JP1-45 
-NET "" LOC="D15" | IOSTANDARD=LVCMOS33; # JP1-46 
+NET "A1_CNV_P" LOC="D15" | IOSTANDARD=LVDS_25; # JP1-46 
 NET "" LOC="C6" | IOSTANDARD=LVCMOS33; # JP1-47 
-NET "" LOC="C16" | IOSTANDARD=LVCMOS33; # JP1-48 
+NET "A1_CNV_N" LOC="C16" | IOSTANDARD=LVDS_25; # JP1-48 
 NET "" LOC="A3" | IOSTANDARD=LVCMOS33; # JP1-49 
-NET "" LOC="B6" | IOSTANDARD=LVCMOS33; # JP1-50 
+NET "A1_D_P" LOC="B6" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-50 
 NET "" LOC="A4" | IOSTANDARD=LVCMOS33; # JP1-51 
-NET "" LOC="A6" | IOSTANDARD=LVCMOS33; # JP1-52 
-NET "" LOC="B8" | IOSTANDARD=LVCMOS33; # JP1-53 
-NET "" LOC="C7" | IOSTANDARD=LVCMOS33; # JP1-54 
+NET "A1_D_N" LOC="A6" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-52 
+NET "A3_EN0_HV" LOC="B8" | IOSTANDARD=LVCMOS33; # JP1-53 
+NET "A1_DCO_P" LOC="C7" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-54 
 NET "" LOC="" ; # JP1-55 
 NET "" LOC="Bank 0 VCCO" ; # JP1-56 
-NET "" LOC="A8" | IOSTANDARD=LVCMOS33; # JP1-57 
-NET "" LOC="A7" | IOSTANDARD=LVCMOS33; # JP1-58 
-NET "" LOC="B10" | IOSTANDARD=LVCMOS33; # JP1-59 
-NET "" LOC="C9" | IOSTANDARD=LVCMOS33; # JP1-60 
-NET "" LOC="A10" | IOSTANDARD=LVCMOS33; # JP1-61 
-NET "" LOC="A9" | IOSTANDARD=LVCMOS33; # JP1-62 
-NET "" LOC="C13" | IOSTANDARD=LVCMOS33; # JP1-63 
-NET "" LOC="B12" | IOSTANDARD=LVCMOS33; # JP1-64 
-NET "" LOC="A13" | IOSTANDARD=LVCMOS33; # JP1-65 
-NET "" LOC="A12" | IOSTANDARD=LVCMOS33; # JP1-66 
-NET "" LOC="C15" | IOSTANDARD=LVCMOS33; # JP1-67 
-NET "" LOC="B14" | IOSTANDARD=LVCMOS33; # JP1-68 
-NET "" LOC="A15" | IOSTANDARD=LVCMOS33; # JP1-69 
-NET "" LOC="A14" | IOSTANDARD=LVCMOS33; # JP1-70 
-NET "" LOC="C17" | IOSTANDARD=LVCMOS33; # JP1-71 
-NET "" LOC="B16" | IOSTANDARD=LVCMOS33; # JP1-72 
-NET "" LOC="A17" | IOSTANDARD=LVCMOS33; # JP1-73 
-NET "" LOC="A16" | IOSTANDARD=LVCMOS33; # JP1-74 
-NET "" LOC="A18" | IOSTANDARD=LVCMOS33; # JP1-75 
-NET "" LOC="B18" | IOSTANDARD=LVCMOS33; # JP1-76 
-NET "" LOC="C11" | IOSTANDARD=LVCMOS33; # JP1-77 
+NET "A1_EN0_HV" LOC="A8" | IOSTANDARD=LVCMOS33; # JP1-57 
+NET "A1_DCO_N" LOC="A7" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-58 
+NET "A1_CLK_P" LOC="B10" | IOSTANDARD=LVDS_25; # JP1-59 
+NET "A3_CNV_P" LOC="C9" | IOSTANDARD=LVDS_25; # JP1-60 
+NET "A1_CLK_N" LOC="A10" | IOSTANDARD=LVDS_25; # JP1-61 
+NET "A3_CNV_N" LOC="A9" | IOSTANDARD=LVDS_25; # JP1-62 
+NET "A2_CNV_P" LOC="C13" | IOSTANDARD=LVDS_25; # JP1-63 
+NET "A3_D_P" LOC="B12" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-64 
+NET "A2_CNV_N" LOC="A13" | IOSTANDARD=LVDS_25; # JP1-65 
+NET "A3_D_N" LOC="A12" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-66 
+NET "A2_D_P" LOC="C15" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-67 
+NET "A3_DCO_P" LOC="B14" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-68 
+NET "A2_D_N" LOC="A15" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-69 
+NET "A3_DCO_N" LOC="A14" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-70 
+NET "A2_DCO_P" LOC="C17" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-71 
+NET "A2_EN0_HV" LOC="B16" | IOSTANDARD=LVCMOS33; # JP1-72 
+NET "A2_DCO_N" LOC="A17" | IOSTANDARD=LVDS_25 | DIFF_TERM = TRUE; # JP1-73 
+NET "A3_EN0" LOC="A16" | IOSTANDARD=LVCMOS33; # JP1-74 
+NET "A2_CLK_N" LOC="A18" | IOSTANDARD=LVDS_25; # JP1-75 
+NET "A2_CLK_P" LOC="B18" | IOSTANDARD=LVDS_25; # JP1-76 
+NET "A3_CLK_P" LOC="C11" | IOSTANDARD=LVDS_25; # JP1-77 
 NET "" LOC="" ; # JP1-78 
-NET "" LOC="A11" | IOSTANDARD=LVCMOS33; # JP1-79 
+NET "A3_CLK_N" LOC="A11" | IOSTANDARD=LVDS_25; # JP1-79 
 NET "" LOC="" ; # JP1-80 
 # LEDs ################################################################
 NET "led[0]"     LOC="V19"    | IOSTANDARD=LVCMOS18;
